--- a/locales/it.json
+++ b/locales/it.json
@@ -31,7 +31,8 @@
     "emailVerification": "Verifica Email Richiesta",
     "emailVerificationMessage": "Controlla la tua email e clicca sul link di verifica per completare la registrazione.",
     "invalidCredentials": "Email o password non validi",
-    "emailNotConfirmed": "Verifica la tua email prima di accedere"
+    "emailNotConfirmed": "Verifica la tua email prima di accedere",
+    "logoutConfirmation": "Sei sicuro di voler uscire?"
   },
   "home": {
     "title": "AUG-Event",
