fix: Correct logout method, invalid icons, and missing translations

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -4,116 +4,115 @@
     "loading": "Chargement...",
     "error": "Erreur",
     "success": "Succès",
+    "ok": "OK",
     "cancel": "Annuler",
-    "confirm": "Confirmer",
-    "save": "Sauvegarder",
     "delete": "Supprimer",
+    "save": "Enregistrer",
     "edit": "Modifier",
     "back": "Retour",
     "next": "Suivant",
     "done": "Terminé",
-    "close": "Fermer",
-    "ok": "OK",
     "retry": "Réessayer",
-    "refresh": "Actualiser"
+    "share": "Partager",
+    "copy": "Copier",
+    "close": "Fermer"
   },
   "auth": {
-    "login": "Connexion",
-    "register": "S'inscrire",
-    "logout": "Déconnexion",
+    "signIn": "Se connecter",
+    "signUp": "S'inscrire",
+    "signOut": "Se déconnecter",
     "email": "Email",
     "password": "Mot de passe",
-    "confirmPassword": "Confirmer le mot de passe",
+    "name": "Nom complet",
     "forgotPassword": "Mot de passe oublié ?",
     "dontHaveAccount": "Vous n'avez pas de compte ?",
     "alreadyHaveAccount": "Vous avez déjà un compte ?",
-    "signUp": "S'inscrire",
-    "signIn": "Se connecter",
-    "emailVerification": "Vérification Email Requise",
-    "emailVerificationMessage": "Vérifiez votre email et cliquez sur le lien de vérification pour terminer votre inscription.",
+    "signInWithGoogle": "Se connecter avec Google",
+    "signInWithApple": "Se connecter avec Apple",
+    "emailPlaceholder": "Entrez votre email",
+    "passwordPlaceholder": "Entrez votre mot de passe",
+    "namePlaceholder": "Entrez votre nom complet",
+    "signInSuccess": "Bon retour !",
+    "signUpSuccess": "Compte créé avec succès !",
+    "signOutSuccess": "Déconnecté avec succès",
     "invalidCredentials": "Email ou mot de passe invalide",
-    "emailNotConfirmed": "Veuillez vérifier votre email avant de vous connecter",
-    "logoutConfirmation": "Êtes-vous sûr de vouloir vous déconnecter ?"
+    "emailNotVerified": "Veuillez vérifier votre adresse email",
+    "verifyEmailSent": "Email de vérification envoyé ! Vérifiez votre boîte de réception."
   },
   "home": {
-    "title": "AUG-Event",
-    "subtitle": "Vos Événements",
+    "title": "Mes Événements",
     "createEvent": "Créer un Événement",
     "joinEvent": "Rejoindre un Événement",
-    "noEvents": "Aucun événement pour le moment",
-    "noEventsDescription": "Créez votre premier événement ou rejoignez-en un avec un code QR",
+    "noEvents": "Aucun événement",
+    "noEventsDescription": "Créez votre premier événement ou rejoignez-en un existant",
     "myEvents": "Mes Événements",
-    "joinedEvents": "Événements Rejoints"
+    "joinedEvents": "Événements Rejoints",
+    "upcomingEvents": "Événements à Venir",
+    "pastEvents": "Événements Passés"
   },
-
   "createEvent": {
     "title": "Créer un Événement",
+    "eventDetails": "Détails de l'Événement",
     "eventTitle": "Titre de l'Événement",
     "eventTitlePlaceholder": "Entrez le titre de l'événement",
-    "eventDate": "Date de l'Événement",
-    "eventLocation": "Lieu de l'Événement",
-    "eventLocationPlaceholder": "Entrez le lieu de l'événement",
     "description": "Description",
     "descriptionPlaceholder": "Entrez la description de l'événement",
+    "eventType": "Type d'Événement",
     "location": "Lieu",
     "locationPlaceholder": "Entrez le lieu de l'événement",
     "dateTime": "Date et Heure",
-    "eventDetails": "Détails de l'Événement",
     "menu": "Menu",
-    "addCourse": "Ajouter un Plat",
-    "addCourses": "Ajoutez des plats à votre menu",
+    "addCourses": "Ajoutez des plats au menu de votre événement",
     "courseName": "Nom du Plat",
     "courseNamePlaceholder": "Entrez le nom du plat",
-    "courseDescription": "Description",
+    "courseDescription": "Description du Plat",
     "courseDescriptionPlaceholder": "Entrez la description du plat",
-    "removeCourse": "Supprimer le Plat",
     "createEvent": "Créer l'Événement",
-    "eventCreatedSuccess": "Événement créé avec succès !",
-    "fillAllFields": "Veuillez remplir tous les champs obligatoires",
-    "appetizer": "Apéritif",
-    "firstCourse": "Entrée",
-    "mainCourse": "Plat Principal",
-    "dessert": "Dessert",
-    "cake": "Gâteau"
+    "eventCreated": "Événement créé avec succès !"
+  },
+  "joinEvent": {
+    "title": "Rejoindre un Événement",
+    "joinWithPassword": "Rejoindre avec Mot de Passe",
+    "enterEventDetails": "Entrez l'ID de l'événement et le mot de passe fournis par l'organisateur",
+    "eventId": "ID de l'Événement",
+    "eventIdPlaceholder": "Entrez l'ID de l'événement",
+    "password": "Mot de passe",
+    "passwordPlaceholder": "Entrez le mot de passe de l'événement",
+    "passwordHint": "Le mot de passe doit contenir au moins 4 caractères",
+    "joinEvent": "Rejoindre l'Événement",
+    "howToJoin": "Comment Rejoindre",
+    "instructions": "Demandez à l'organisateur de l'événement l'ID de l'événement et le mot de passe. Les deux sont requis pour rejoindre l'événement."
   },
   "event": {
-    "title": "Détails de l'Événement",
     "menu": "Menu",
     "notifications": "Notifications",
     "album": "Album",
+    "access": "Accès",
     "qrCode": "Code QR",
     "invites": "Invitations",
-    "startEvent": "Démarrer l'Événement",
-    "endEvent": "Terminer l'Événement",
-    "eventStarted": "Événement Démarré",
-    "eventEnded": "Événement Terminé",
-    "markServed": "Marquer comme Servi",
-    "served": "Servi",
-    "sendNotification": "Envoyer une Notification",
-    "noNotifications": "Aucune notification pour le moment",
-    "noPhotos": "Aucune photo pour le moment",
+    "details": "Détails",
+    "participants": "Participants",
+    "noMenu": "Aucun élément de menu",
+    "noPhotos": "Aucune photo",
+    "noNotifications": "Aucune notification",
     "uploadPhoto": "Télécharger une Photo",
     "takePhoto": "Prendre une Photo",
-    "chooseFromLibrary": "Choisir dans la Bibliothèque",
+    "chooseFromLibrary": "Choisir dans la Galerie",
+    "photoOptions": "Options de Photo",
+    "downloadPhoto": "Télécharger la Photo",
     "deletePhoto": "Supprimer la Photo",
     "confirmDeletePhoto": "Êtes-vous sûr de vouloir supprimer cette photo ?",
-    "photoDeletedSuccess": "Photo supprimée avec succès",
-    "photoUploadedSuccess": "Photo téléchargée avec succès",
-    "notServed": "Pas encore servi",
-    "alreadyServed": "Déjà servi",
-    "tapToNotify": "Appuyez pour notifier les participants",
-    "sendNotificationDescription": "Envoyez des notifications quand les plats sont prêts",
-    "waitingForNotifications": "En attente de notifications",
-    "notificationsDescription": "L'organisateur enverra des notifications quand les plats sont prêts",
-    "qrCodeOrganizerOnly": "Accès Code QR",
-    "qrCodeDescription": "Seul l'organisateur peut voir et partager le code QR",
-    "accessPassword": "Mot de Passe d'Accès",
-    "passwordRequired": "Mot de passe requis pour rejoindre",
+    "photoUploadedSuccess": "Photo téléchargée avec succès !",
+    "photoDeletedSuccess": "Photo supprimée avec succès !",
+    "photoSavedToGallery": "Photo sauvegardée dans la galerie !",
+    "markServed": "Marquer comme Servi",
+    "served": "Servi",
+    "notFound": "Événement non trouvé",
+    "accessDetails": "Détails d'Accès",
+    "shareEvent": "Partager l'Événement",
+    "copyEventId": "Copier l'ID de l'Événement",
+    "eventPassword": "Mot de Passe de l'Événement",
     "regeneratePassword": "Régénérer le Mot de Passe",
-    "regeneratePasswordConfirm": "Cela créera un nouveau mot de passe et code QR. L'ancien code QR ne fonctionnera plus. Continuer ?",
-    "passwordRegenerated": "Mot de Passe Régénéré",
-    "newPasswordGenerated": "Nouveau mot de passe généré avec succès",
-    "invalidPassword": "Mot de passe d'accès invalide",
     "courses": {
       "appetizer": "Apéritif",
       "first": "Entrée",
@@ -122,53 +121,44 @@
       "cake": "Gâteau"
     }
   },
-  "qrScanner": {
-    "title": "Scanner le Code QR",
-    "requestingPermission": "Demande d'autorisation de la caméra...",
-    "cameraAccessRequired": "Accès à la Caméra Requis",
-    "enableCameraAccess": "Veuillez activer l'accès à la caméra pour scanner les codes QR",
-    "goBack": "Retour",
-    "pointCamera": "Pointez votre caméra sur le code QR pour rejoindre l'événement",
-    "scanAgain": "Scanner à Nouveau",
-    "invalidQRCode": "Code QR Invalide",
-    "invalidQRCodeMessage": "Ce n'est pas un code QR AUG-Event valide",
-    "scanToJoin": "Scanner le Code QR pour Rejoindre l'Événement",
-    "scanDescription": "Pointez votre caméra sur un code QR d'événement pour rejoindre",
-    "startScanning": "Commencer le Scan"
-  },
-  "scanQR": {
-    "title": "Scanner le Code QR",
-    "scanToJoin": "Scanner le Code QR pour Rejoindre l'Événement",
-    "scanDescription": "Pointez votre caméra sur un code QR d'événement pour rejoindre",
-    "startScanning": "Commencer le Scan"
+  "eventTypes": {
+    "wedding": "Mariage",
+    "birthday": "Anniversaire",
+    "celebration": "Célébration",
+    "anniversary": "Anniversaire",
+    "graduation": "Remise de Diplôme",
+    "corporate": "Entreprise",
+    "party": "Fête",
+    "other": "Autre"
   },
   "notifications": {
-    "courseNotifications": "Notifications de Plats",
-    "appetizerReady": "L'apéritif est prêt !",
-    "firstCourseReady": "L'entrée est prête !",
-    "mainCourseReady": "Le plat principal est prêt !",
-    "dessertReady": "Le dessert est prêt !",
-    "cakeTime": "C'est l'heure du gâteau !",
-    "customNotification": "Notification personnalisée",
-    "sendCustomNotification": "Envoyer une Notification Personnalisée",
-    "notificationSent": "Notification envoyée avec succès",
-    "notificationError": "Échec de l'envoi de la notification"
+    "courseReady": "Plat Prêt",
+    "eventUpdate": "Mise à Jour de l'Événement",
+    "photoUploaded": "Photo Téléchargée",
+    "newParticipant": "Nouveau Participant"
   },
   "settings": {
     "title": "Paramètres",
     "language": "Langue",
     "selectLanguage": "Sélectionner la Langue",
-    "english": "Anglais",
-    "italian": "Italien",
-    "french": "Français",
-    "languageChanged": "Langue changée avec succès"
+    "languageChanged": "Langue changée avec succès",
+    "notifications": "Notifications",
+    "privacy": "Confidentialité",
+    "about": "À Propos",
+    "signOut": "Se Déconnecter",
+    "version": "Version"
+  },
+  "languages": {
+    "en": "English",
+    "it": "Italiano",
+    "fr": "Français"
   },
   "errors": {
-    "networkError": "Erreur réseau. Vérifiez votre connexion.",
-    "serverError": "Erreur serveur. Veuillez réessayer plus tard.",
-    "unknownError": "Une erreur inconnue s'est produite.",
-    "supabaseNotConfigured": "Supabase n'est pas configuré. Veuillez d'abord configurer votre connexion Supabase.",
-    "cameraNotSupported": "La caméra n'est pas prise en charge sur cet appareil",
-    "notificationNotSupported": "Les notifications push ne sont pas prises en charge dans Expo Go. Veuillez utiliser un development build."
+    "networkError": "Erreur réseau. Veuillez vérifier votre connexion.",
+    "unknownError": "Une erreur inconnue s'est produite",
+    "invalidInput": "Entrée invalide",
+    "unauthorized": "Accès non autorisé",
+    "notFound": "Non trouvé",
+    "serverError": "Erreur serveur. Veuillez réessayer plus tard."
   }
 }
