--- a/locales/it.json
+++ b/locales/it.json
@@ -4,171 +4,161 @@
     "loading": "Caricamento...",
     "error": "Errore",
     "success": "Successo",
+    "ok": "OK",
     "cancel": "Annulla",
-    "confirm": "Conferma",
-    "save": "Salva",
     "delete": "Elimina",
+    "save": "Salva",
     "edit": "Modifica",
     "back": "Indietro",
     "next": "Avanti",
     "done": "Fatto",
-    "close": "Chiudi",
-    "ok": "OK",
     "retry": "Riprova",
-    "refresh": "Aggiorna"
+    "share": "Condividi",
+    "copy": "Copia",
+    "close": "Chiudi"
   },
   "auth": {
-    "login": "Accedi",
-    "register": "Registrati",
-    "logout": "Esci",
+    "signIn": "Accedi",
+    "signUp": "Registrati",
+    "signOut": "Esci",
     "email": "Email",
     "password": "Password",
-    "confirmPassword": "Conferma Password",
+    "name": "Nome completo",
     "forgotPassword": "Password dimenticata?",
     "dontHaveAccount": "Non hai un account?",
     "alreadyHaveAccount": "Hai già un account?",
-    "signUp": "Registrati",
-    "signIn": "Accedi",
-    "emailVerification": "Verifica Email Richiesta",
-    "emailVerificationMessage": "Controlla la tua email e clicca sul link di verifica per completare la registrazione.",
+    "signInWithGoogle": "Accedi con Google",
+    "signInWithApple": "Accedi con Apple",
+    "emailPlaceholder": "Inserisci la tua email",
+    "passwordPlaceholder": "Inserisci la tua password",
+    "namePlaceholder": "Inserisci il tuo nome completo",
+    "signInSuccess": "Bentornato!",
+    "signUpSuccess": "Account creato con successo!",
+    "signOutSuccess": "Disconnesso con successo",
     "invalidCredentials": "Email o password non validi",
-    "emailNotConfirmed": "Verifica la tua email prima di accedere",
-    "logoutConfirmation": "Sei sicuro di voler uscire?"
+    "emailNotVerified": "Verifica il tuo indirizzo email",
+    "verifyEmailSent": "Email di verifica inviata! Controlla la tua casella di posta."
   },
   "home": {
-    "title": "AUG-Event",
-    "subtitle": "I Tuoi Eventi",
+    "title": "I Miei Eventi",
     "createEvent": "Crea Evento",
     "joinEvent": "Unisciti all'Evento",
-    "noEvents": "Nessun evento ancora",
-    "noEventsDescription": "Crea il tuo primo evento o unisciti a uno usando un codice QR",
+    "noEvents": "Nessun evento",
+    "noEventsDescription": "Crea il tuo primo evento o unisciti a uno esistente",
     "myEvents": "I Miei Eventi",
-    "joinedEvents": "Eventi a cui Partecipo"
+    "joinedEvents": "Eventi a cui Partecipo",
+    "upcomingEvents": "Eventi Futuri",
+    "pastEvents": "Eventi Passati"
   },
-
   "createEvent": {
     "title": "Crea Evento",
-    "eventTitle": "Titolo Evento",
+    "eventDetails": "Dettagli dell'Evento",
+    "eventTitle": "Titolo dell'Evento",
     "eventTitlePlaceholder": "Inserisci il titolo dell'evento",
-    "eventDate": "Data Evento",
-    "eventLocation": "Luogo Evento",
-    "eventLocationPlaceholder": "Inserisci il luogo dell'evento",
     "description": "Descrizione",
     "descriptionPlaceholder": "Inserisci la descrizione dell'evento",
+    "eventType": "Tipo di Evento",
     "location": "Luogo",
     "locationPlaceholder": "Inserisci il luogo dell'evento",
     "dateTime": "Data e Ora",
-    "eventDetails": "Dettagli Evento",
     "menu": "Menu",
-    "addCourse": "Aggiungi Portata",
-    "addCourses": "Aggiungi portate al tuo menu",
-    "courseName": "Nome Portata",
+    "addCourses": "Aggiungi portate al menu del tuo evento",
+    "courseName": "Nome della Portata",
     "courseNamePlaceholder": "Inserisci il nome della portata",
-    "courseDescription": "Descrizione",
+    "courseDescription": "Descrizione della Portata",
     "courseDescriptionPlaceholder": "Inserisci la descrizione della portata",
-    "removeCourse": "Rimuovi Portata",
     "createEvent": "Crea Evento",
-    "eventCreatedSuccess": "Evento creato con successo!",
-    "fillAllFields": "Compila tutti i campi obbligatori",
-    "appetizer": "Antipasto",
-    "firstCourse": "Primo Piatto",
-    "mainCourse": "Secondo Piatto",
-    "dessert": "Dolce",
-    "cake": "Torta"
+    "eventCreated": "Evento creato con successo!"
+  },
+  "joinEvent": {
+    "title": "Unisciti all'Evento",
+    "joinWithPassword": "Unisciti con Password",
+    "enterEventDetails": "Inserisci l'ID dell'evento e la password forniti dall'organizzatore",
+    "eventId": "ID Evento",
+    "eventIdPlaceholder": "Inserisci l'ID dell'evento",
+    "password": "Password",
+    "passwordPlaceholder": "Inserisci la password dell'evento",
+    "passwordHint": "La password deve essere di almeno 4 caratteri",
+    "joinEvent": "Unisciti all'Evento",
+    "howToJoin": "Come Unirsi",
+    "instructions": "Chiedi all'organizzatore dell'evento l'ID dell'evento e la password. Entrambi sono necessari per unirsi all'evento."
   },
   "event": {
-    "title": "Dettagli Evento",
     "menu": "Menu",
     "notifications": "Notifiche",
     "album": "Album",
+    "access": "Accesso",
     "qrCode": "Codice QR",
     "invites": "Inviti",
-    "startEvent": "Inizia Evento",
-    "endEvent": "Termina Evento",
-    "eventStarted": "Evento Iniziato",
-    "eventEnded": "Evento Terminato",
-    "markServed": "Segna come Servito",
-    "served": "Servito",
-    "sendNotification": "Invia Notifica",
-    "noNotifications": "Nessuna notifica ancora",
-    "noPhotos": "Nessuna foto ancora",
+    "details": "Dettagli",
+    "participants": "Partecipanti",
+    "noMenu": "Nessun elemento del menu",
+    "noPhotos": "Nessuna foto",
+    "noNotifications": "Nessuna notifica",
     "uploadPhoto": "Carica Foto",
     "takePhoto": "Scatta Foto",
-    "chooseFromLibrary": "Scegli dalla Libreria",
+    "chooseFromLibrary": "Scegli dalla Galleria",
+    "photoOptions": "Opzioni Foto",
+    "downloadPhoto": "Scarica Foto",
     "deletePhoto": "Elimina Foto",
     "confirmDeletePhoto": "Sei sicuro di voler eliminare questa foto?",
-    "photoDeletedSuccess": "Foto eliminata con successo",
-    "photoUploadedSuccess": "Foto caricata con successo",
-    "notServed": "Non ancora servito",
-    "alreadyServed": "Già servito",
-    "tapToNotify": "Tocca per notificare i partecipanti",
-    "sendNotificationDescription": "Invia notifiche quando le portate sono pronte",
-    "waitingForNotifications": "In attesa di notifiche",
-    "notificationsDescription": "L'organizzatore invierà notifiche quando le portate sono pronte",
-    "qrCodeOrganizerOnly": "Accesso Codice QR",
-    "qrCodeDescription": "Solo l'organizzatore può visualizzare e condividere il codice QR",
-    "accessPassword": "Password di Accesso",
-    "passwordRequired": "Password richiesta per partecipare",
+    "photoUploadedSuccess": "Foto caricata con successo!",
+    "photoDeletedSuccess": "Foto eliminata con successo!",
+    "photoSavedToGallery": "Foto salvata nella galleria!",
+    "markServed": "Segna come Servito",
+    "served": "Servito",
+    "notFound": "Evento non trovato",
+    "accessDetails": "Dettagli di Accesso",
+    "shareEvent": "Condividi Evento",
+    "copyEventId": "Copia ID Evento",
+    "eventPassword": "Password Evento",
     "regeneratePassword": "Rigenera Password",
-    "regeneratePasswordConfirm": "Questo creerà una nuova password e codice QR. Il vecchio codice QR non funzionerà più. Continuare?",
-    "passwordRegenerated": "Password Rigenerata",
-    "newPasswordGenerated": "Nuova password generata con successo",
-    "invalidPassword": "Password di accesso non valida",
     "courses": {
       "appetizer": "Antipasto",
       "first": "Primo Piatto",
-      "main": "Secondo Piatto",
+      "main": "Piatto Principale",
       "dessert": "Dolce",
       "cake": "Torta"
     }
   },
-  "qrScanner": {
-    "title": "Scansiona Codice QR",
-    "requestingPermission": "Richiesta permesso fotocamera...",
-    "cameraAccessRequired": "Accesso Fotocamera Richiesto",
-    "enableCameraAccess": "Abilita l'accesso alla fotocamera per scansionare i codici QR",
-    "goBack": "Torna Indietro",
-    "pointCamera": "Punta la fotocamera sul codice QR per unirti all'evento",
-    "scanAgain": "Scansiona di Nuovo",
-    "invalidQRCode": "Codice QR Non Valido",
-    "invalidQRCodeMessage": "Questo non è un codice QR AUG-Event valido",
-    "scanToJoin": "Scansiona Codice QR per Unirti all'Evento",
-    "scanDescription": "Punta la fotocamera su un codice QR dell'evento per unirti",
-    "startScanning": "Inizia Scansione"
-  },
-  "scanQR": {
-    "title": "Scansiona Codice QR",
-    "scanToJoin": "Scansiona Codice QR per Unirti all'Evento",
-    "scanDescription": "Punta la fotocamera su un codice QR dell'evento per unirti",
-    "startScanning": "Inizia Scansione"
+  "eventTypes": {
+    "wedding": "Matrimonio",
+    "birthday": "Compleanno",
+    "celebration": "Celebrazione",
+    "anniversary": "Anniversario",
+    "graduation": "Laurea",
+    "corporate": "Aziendale",
+    "party": "Festa",
+    "other": "Altro"
   },
   "notifications": {
-    "courseNotifications": "Notifiche Portate",
-    "appetizerReady": "L'antipasto è pronto!",
-    "firstCourseReady": "Il primo piatto è pronto!",
-    "mainCourseReady": "Il secondo piatto è pronto!",
-    "dessertReady": "Il dolce è pronto!",
-    "cakeTime": "È ora della torta!",
-    "customNotification": "Notifica personalizzata",
-    "sendCustomNotification": "Invia Notifica Personalizzata",
-    "notificationSent": "Notifica inviata con successo",
-    "notificationError": "Impossibile inviare la notifica"
+    "courseReady": "Portata Pronta",
+    "eventUpdate": "Aggiornamento Evento",
+    "photoUploaded": "Foto Caricata",
+    "newParticipant": "Nuovo Partecipante"
   },
   "settings": {
     "title": "Impostazioni",
     "language": "Lingua",
     "selectLanguage": "Seleziona Lingua",
-    "english": "Inglese",
-    "italian": "Italiano",
-    "french": "Francese",
-    "languageChanged": "Lingua cambiata con successo"
+    "languageChanged": "Lingua cambiata con successo",
+    "notifications": "Notifiche",
+    "privacy": "Privacy",
+    "about": "Informazioni",
+    "signOut": "Esci",
+    "version": "Versione"
+  },
+  "languages": {
+    "en": "English",
+    "it": "Italiano",
+    "fr": "Français"
   },
   "errors": {
     "networkError": "Errore di rete. Controlla la tua connessione.",
-    "serverError": "Errore del server. Riprova più tardi.",
-    "unknownError": "Si è verificato un errore sconosciuto.",
-    "supabaseNotConfigured": "Supabase non è configurato. Configura prima la connessione Supabase.",
-    "cameraNotSupported": "La fotocamera non è supportata su questo dispositivo",
-    "notificationNotSupported": "Le notifiche push non sono supportate in Expo Go. Usa un development build."
+    "unknownError": "Si è verificato un errore sconosciuto",
+    "invalidInput": "Input non valido",
+    "unauthorized": "Accesso non autorizzato",
+    "notFound": "Non trovato",
+    "serverError": "Errore del server. Riprova più tardi."
   }
 }
