--- a/locales/en.json
+++ b/locales/en.json
@@ -4,116 +4,115 @@
     "loading": "Loading...",
     "error": "Error",
     "success": "Success",
+    "ok": "OK",
     "cancel": "Cancel",
-    "confirm": "Confirm",
-    "save": "Save",
     "delete": "Delete",
+    "save": "Save",
     "edit": "Edit",
     "back": "Back",
     "next": "Next",
     "done": "Done",
-    "close": "Close",
-    "ok": "OK",
     "retry": "Retry",
-    "refresh": "Refresh"
+    "share": "Share",
+    "copy": "Copy",
+    "close": "Close"
   },
   "auth": {
-    "login": "Login",
-    "register": "Register",
-    "logout": "Logout",
+    "signIn": "Sign In",
+    "signUp": "Sign Up",
+    "signOut": "Sign Out",
     "email": "Email",
     "password": "Password",
-    "confirmPassword": "Confirm Password",
+    "name": "Full Name",
     "forgotPassword": "Forgot Password?",
     "dontHaveAccount": "Don't have an account?",
     "alreadyHaveAccount": "Already have an account?",
-    "signUp": "Sign Up",
-    "signIn": "Sign In",
-    "emailVerification": "Email Verification Required",
-    "emailVerificationMessage": "Please check your email and click the verification link to complete your registration.",
+    "signInWithGoogle": "Sign in with Google",
+    "signInWithApple": "Sign in with Apple",
+    "emailPlaceholder": "Enter your email",
+    "passwordPlaceholder": "Enter your password",
+    "namePlaceholder": "Enter your full name",
+    "signInSuccess": "Welcome back!",
+    "signUpSuccess": "Account created successfully!",
+    "signOutSuccess": "Signed out successfully",
     "invalidCredentials": "Invalid email or password",
-    "emailNotConfirmed": "Please verify your email before signing in",
-    "logoutConfirmation": "Are you sure you want to logout?"
+    "emailNotVerified": "Please verify your email address",
+    "verifyEmailSent": "Verification email sent! Please check your inbox."
   },
   "home": {
-    "title": "AUG-Event",
-    "subtitle": "Your Events",
+    "title": "My Events",
     "createEvent": "Create Event",
     "joinEvent": "Join Event",
     "noEvents": "No events yet",
-    "noEventsDescription": "Create your first event or join one using a QR code",
+    "noEventsDescription": "Create your first event or join an existing one",
     "myEvents": "My Events",
-    "joinedEvents": "Joined Events"
+    "joinedEvents": "Joined Events",
+    "upcomingEvents": "Upcoming Events",
+    "pastEvents": "Past Events"
   },
-
   "createEvent": {
     "title": "Create Event",
+    "eventDetails": "Event Details",
     "eventTitle": "Event Title",
     "eventTitlePlaceholder": "Enter event title",
-    "eventDate": "Event Date",
-    "eventLocation": "Event Location",
-    "eventLocationPlaceholder": "Enter event location",
     "description": "Description",
     "descriptionPlaceholder": "Enter event description",
+    "eventType": "Event Type",
     "location": "Location",
     "locationPlaceholder": "Enter event location",
     "dateTime": "Date & Time",
-    "eventDetails": "Event Details",
     "menu": "Menu",
-    "addCourse": "Add Course",
-    "addCourses": "Add courses to your menu",
+    "addCourses": "Add courses to your event menu",
     "courseName": "Course Name",
     "courseNamePlaceholder": "Enter course name",
-    "courseDescription": "Description",
+    "courseDescription": "Course Description",
     "courseDescriptionPlaceholder": "Enter course description",
-    "removeCourse": "Remove Course",
     "createEvent": "Create Event",
-    "eventCreatedSuccess": "Event created successfully!",
-    "fillAllFields": "Please fill in all required fields",
-    "appetizer": "Appetizer",
-    "firstCourse": "First Course",
-    "mainCourse": "Main Course",
-    "dessert": "Dessert",
-    "cake": "Cake"
+    "eventCreated": "Event created successfully!"
+  },
+  "joinEvent": {
+    "title": "Join Event",
+    "joinWithPassword": "Join with Password",
+    "enterEventDetails": "Enter the event ID and password provided by the organizer",
+    "eventId": "Event ID",
+    "eventIdPlaceholder": "Enter event ID",
+    "password": "Password",
+    "passwordPlaceholder": "Enter event password",
+    "passwordHint": "Password must be at least 4 characters",
+    "joinEvent": "Join Event",
+    "howToJoin": "How to Join",
+    "instructions": "Ask the event organizer for the Event ID and Password. Both are required to join the event."
   },
   "event": {
-    "title": "Event Details",
     "menu": "Menu",
     "notifications": "Notifications",
     "album": "Album",
+    "access": "Access",
     "qrCode": "QR Code",
     "invites": "Invites",
-    "startEvent": "Start Event",
-    "endEvent": "End Event",
-    "eventStarted": "Event Started",
-    "eventEnded": "Event Ended",
-    "markServed": "Mark as Served",
-    "served": "Served",
-    "sendNotification": "Send Notification",
-    "noNotifications": "No notifications yet",
+    "details": "Details",
+    "participants": "Participants",
+    "noMenu": "No menu items",
     "noPhotos": "No photos yet",
+    "noNotifications": "No notifications",
     "uploadPhoto": "Upload Photo",
     "takePhoto": "Take Photo",
     "chooseFromLibrary": "Choose from Library",
+    "photoOptions": "Photo Options",
+    "downloadPhoto": "Download Photo",
     "deletePhoto": "Delete Photo",
     "confirmDeletePhoto": "Are you sure you want to delete this photo?",
-    "photoDeletedSuccess": "Photo deleted successfully",
-    "photoUploadedSuccess": "Photo uploaded successfully",
-    "notServed": "Not served yet",
-    "alreadyServed": "Already served",
-    "tapToNotify": "Tap to notify participants",
-    "sendNotificationDescription": "Send notifications when courses are ready",
-    "waitingForNotifications": "Waiting for notifications",
-    "notificationsDescription": "The organizer will send notifications when courses are ready",
-    "qrCodeOrganizerOnly": "QR Code Access",
-    "qrCodeDescription": "Only the organizer can view and share the QR code",
-    "accessPassword": "Access Password",
-    "passwordRequired": "Password required to join",
+    "photoUploadedSuccess": "Photo uploaded successfully!",
+    "photoDeletedSuccess": "Photo deleted successfully!",
+    "photoSavedToGallery": "Photo saved to gallery!",
+    "markServed": "Mark Served",
+    "served": "Served",
+    "notFound": "Event not found",
+    "accessDetails": "Access Details",
+    "shareEvent": "Share Event",
+    "copyEventId": "Copy Event ID",
+    "eventPassword": "Event Password",
     "regeneratePassword": "Regenerate Password",
-    "regeneratePasswordConfirm": "This will create a new password and QR code. The old QR code will no longer work. Continue?",
-    "passwordRegenerated": "Password Regenerated",
-    "newPasswordGenerated": "New password generated successfully",
-    "invalidPassword": "Invalid access password",
     "courses": {
       "appetizer": "Appetizer",
       "first": "First Course",
@@ -122,53 +121,44 @@
       "cake": "Cake"
     }
   },
-  "qrScanner": {
-    "title": "Scan QR Code",
-    "requestingPermission": "Requesting camera permission...",
-    "cameraAccessRequired": "Camera Access Required",
-    "enableCameraAccess": "Please enable camera access to scan QR codes",
-    "goBack": "Go Back",
-    "pointCamera": "Point your camera at the QR code to join the event",
-    "scanAgain": "Scan Again",
-    "invalidQRCode": "Invalid QR Code",
-    "invalidQRCodeMessage": "This is not a valid AUG-Event QR code",
-    "scanToJoin": "Scan QR Code to Join Event",
-    "scanDescription": "Point your camera at an event QR code to join",
-    "startScanning": "Start Scanning"
-  },
-  "scanQR": {
-    "title": "Scan QR Code",
-    "scanToJoin": "Scan QR Code to Join Event",
-    "scanDescription": "Point your camera at an event QR code to join",
-    "startScanning": "Start Scanning"
+  "eventTypes": {
+    "wedding": "Wedding",
+    "birthday": "Birthday",
+    "celebration": "Celebration",
+    "anniversary": "Anniversary",
+    "graduation": "Graduation",
+    "corporate": "Corporate",
+    "party": "Party",
+    "other": "Other"
   },
   "notifications": {
-    "courseNotifications": "Course Notifications",
-    "appetizerReady": "Appetizer is ready!",
-    "firstCourseReady": "First course is ready!",
-    "mainCourseReady": "Main course is ready!",
-    "dessertReady": "Dessert is ready!",
-    "cakeTime": "It's cake time!",
-    "customNotification": "Custom notification",
-    "sendCustomNotification": "Send Custom Notification",
-    "notificationSent": "Notification sent successfully",
-    "notificationError": "Failed to send notification"
+    "courseReady": "Course Ready",
+    "eventUpdate": "Event Update",
+    "photoUploaded": "Photo Uploaded",
+    "newParticipant": "New Participant"
   },
   "settings": {
     "title": "Settings",
     "language": "Language",
     "selectLanguage": "Select Language",
-    "english": "English",
-    "italian": "Italian",
-    "french": "French",
-    "languageChanged": "Language changed successfully"
+    "languageChanged": "Language changed successfully",
+    "notifications": "Notifications",
+    "privacy": "Privacy",
+    "about": "About",
+    "signOut": "Sign Out",
+    "version": "Version"
+  },
+  "languages": {
+    "en": "English",
+    "it": "Italiano",
+    "fr": "Français"
   },
   "errors": {
     "networkError": "Network error. Please check your connection.",
-    "serverError": "Server error. Please try again later.",
-    "unknownError": "An unknown error occurred.",
-    "supabaseNotConfigured": "Supabase is not configured. Please set up your Supabase connection first.",
-    "cameraNotSupported": "Camera is not supported on this device",
-    "notificationNotSupported": "Push notifications are not supported in Expo Go. Please use a development build."
+    "unknownError": "An unknown error occurred",
+    "invalidInput": "Invalid input",
+    "unauthorized": "Unauthorized access",
+    "notFound": "Not found",
+    "serverError": "Server error. Please try again later."
   }
 }
